# rust-teris

./: .gitignore  .gitignore.license  Cargo.toml  README.md  TODO.md
.reuse/: dep5
src/: main.rs  model.rs  view.rs
