# SPDX-FileCopyrightText: 2022 Sebastian Andersson <sebastian@bittr.nu>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "tetris"
version = "0.1.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
rand = "0.8.*"
pancurses = "*"

[profile.release]
debug = true
